@@ -102,7 +102,8 @@ module ActiveMerchant # :nodoc:
         transcript.
           gsub(%r((Authorization: Basic )[\w =]+), '\1[FILTERED]').
           gsub(%r((\"number\\":\\")\d+), '\1[FILTERED]\2').
-          gsub(%r((\"cvv\\":\\")\d+), '\1[FILTERED]\2')
+          gsub(%r((\"cvv\\":\\")\d+), '\1[FILTERED]\2').
+          gsub(%r((\"pan\\":\\")\d+), '\1[FILTERED]\2')
       end
 
       private
