@@ -144,6 +144,7 @@
 * CyberSource: Void Acepts nil values [gasb150] #5442
 * Ebanx: Handle special characters in email [ankurspreedly] #5444
 * Orbital: Add support for more currencies [ankurspreedly] #5438
+* Datatrans: Include additional scrub on store call [naashton] #5447
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
